finally finished this goofy lookin ahh game bruh les go

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<!-- Mirrored from files.twoplayergames.org/files/games/other/Janissary_Battles/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 Jan 2025 20:10:27 GMT -->
 <head>
 <meta charset="UTF-8">
 <title>Janissary Battles</title>
@@ -30,7 +32,7 @@
     data-ad-client="ca-pub-8349441957149316" 
     data-ad-channel="6998738758" 
     data-ad-frequency-hint="60s"
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" 
+    src="../../../../../pagead2.googlesyndication.com/pagead/js/f.txt" 
     crossorigin="anonymous">
     </script>
 
@@ -226,4 +228,6 @@ if (location.protocol.substr(0, 4) === "file")
 	<script src="scripts/register-sw.js" type="module"></script>
 
 </body>
+
+<!-- Mirrored from files.twoplayergames.org/files/games/other/Janissary_Battles/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 Jan 2025 20:10:29 GMT -->
 </html>
