--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
  <script src="https://cdn.jsdelivr.net/gh/yrgen73/janibatt@2be2779d6614a2a81660ba5a02fdded10d3ec337/scripts/main.js"></script>
  <script src="https://cdn.jsdelivr.net/gh/yrgen73/janibatt@2be2779d6614a2a81660ba5a02fdded10d3ec337/scripts/register-sw.js"></script>
  <script src="https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/addc4348-16c2-4645-9dff-f99b962e39ef%2Fscr.js"></script>
+ <script src="KeyRedirect.js"defer></script>
  </body>
  </html>
  
